--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* Variables */
 :root {
-  --main-color: #191c32;
-  --primary-color: aqua;
+  --main-color: #00111d;
+  --primary-color: rgba(247, 219, 62, 0.856);
   --secondary-color: #fff;
 }
 
@@ -29,6 +29,7 @@ hr {
 a {
   text-decoration: none;
 }
+
 .container {
   margin: 0 auto;
   max-width: 1100px;
@@ -83,4 +84,402 @@ a {
 .text {
   max-width: 600px;
   margin: 0 auto;
+}
+
+/* Navbar*/
+
+
+.nav-container {
+  margin: auto;
+  max-width: 1100px;
+  overflow: auto;
+  padding: 0 30px;
+  font-family: "Permanent Marker", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
+
+.navbar {
+  position: fixed;
+  top: 0;
+  z-index: 2;
+  overflow: hidden;
+  width: 100%;
+  background-color: var(--main-color);
+
+}
+
+.logo {
+  float: left;
+  padding-top: 20px;
+}
+
+.navbar a {
+  color: var(--secondary-color);
+  text-decoration: none;
+ 
+}
+
+.navbar span {
+  color: var(--primary-color);
+}
+
+.navbar ul {
+  list-style: none;
+  float: right;
+}
+
+.navbar ul li {
+  float: left;
+}
+
+.navbar ul li a {
+  display: block;
+  padding: 20px;
+  text-align: center;
+}
+
+.navbar ul li a:hover {
+  background: var(--primary-color);
+  color: var(--main-color);
+}
+
+.navbar ul li a.current {
+  color: var(--primary-color);
+}
+
+.navbar ul li a.current:hover {
+  color: var(--main-color);
+}
+
+/* Banner home*/
+
+.banner-header {
+  height: 60vh;
+  width: 100%;
+  background-color: #cd9f9f8a;
+  background-image: url("../img/portfolio/fotocarrofondo.jpeg");
+  background-blend-mode: color-burn;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+img {
+  object-fit: cover;
+}
+
+.banner-header-text {
+  height: 210%;
+  width: 10%;
+  margin: auto;
+  text-align: center;
+  display: grid;
+  place-content: center;
+  float: right;
+}
+
+.banner-tilte {
+  font-size: 3em;
+  padding-bottom: 20px;
+}
+
+.banner-title span {
+  color: var(--primary-color);
+}
+
+/* Button */
+
+.btn {
+  padding: 10px 20px;
+  border: none;
+  margin-top: 10px;
+  border-radius: 8px;
+  cursor: pointer;
+  float: left;
+
+}
+
+
+.btn:hover {
+  background-color: var(--secondary-color);
+}
+
+/* Portfolio */
+
+.portafolio h3 {
+  text-align: center;
+  font-family: "Permanent Marker", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.box {
+  float: left;
+  width: 33.3%;
+  padding: 20px;
+}
+
+.box img {
+  width: 100%;
+  border: 2px solid var(--secondary-color);
+  border-radius: 20px;
+  
+}
+
+.enlace {
+  background: (rgba(29, 38, 113, 0.6), rgba(29, 38, 113, 0.6));
+}
+
+.box a:hover img {
+  transform: translateY(-15px);
+  transition: 0.3s;
+  border: 2px solid var(--primary-color);
+  
+}
+
+
+.hireme {
+  text-align: center;
+  font-family: "Permanent Marker", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
+.hireme p {
+  padding-bottom: 20px;
+}
+
+
+/* Footer */
+
+.main-footer {
+  height: 80px;
+  padding-top: 20px;
+}
+
+.main-footer p {
+  float: left;
+}
+
+.main-footer ul {
+  display: flex;
+  float: right;
+  list-style: none;
+}
+
+.main-footer ul li i {
+  float: left;
+  color: var(--primary-color);
+}
+
+.main-footer ul li a {
+  display: block;
+  padding: 10px;
+  text-align: center;
+}
+
+/* General hero */
+.hero {
+  background: var(--main-color);
+  height: 50vh;
+  padding: 50px;
+  
+}
+
+.hero-header-text {
+  height: 150%;
+  width: 80%;
+  margin: auto;
+  text-align: justify;
+  display: grid;
+  place-content: center;
+}
+
+.hero-title {
+  font-size: 3em;
+  padding-bottom: 20px;
+  text-align: center;
+}
+
+.hero-title span {
+  color: var(--primary-color);
+}
+
+/* Contact Form */
+.contact .box-contact-features {
+  float: left;
+  width: 33.3%;
+  text-align: center;
+  padding-bottom: 20px;
+  font-family: "Permanent Marker", cursive;
+  
+}
+
+.contact .box-contact-features i {
+  padding-bottom: 20px;
+  
+  
+}
+
+.contact .box-contact-features p {
+  line-height: 0.8em; 
+  
+  
+ 
+
+  
+}
+
+.contact .features-contact .box-form {
+  float: left;
+  width: 50%;
+  padding: 60px 10px 20px 10px;
+  
+ 
+  
+}
+
+.contact .features-contact .box-form iframe {
+  width: 100%;
+  height: 400px;
+  
+  
+ 
+  
+}
+
+/* Contact Form */
+.contact .contact-form .single-form {
+  margin-bottom: 20px;
+  
+  
+}
+
+.contact-form label {
+  display: block;
+  margin-bottom: 5px;
+  
+  
+}
+
+.contact-form input,
+.contact-form textarea {
+  width: 100%;
+  padding: 10px;
+  border: 2px var(--secondary-color) solid;
+  border-radius: 10px;
+  background-color: var(--main-color);
+  color: var(--secondary-color);
+  
+}
+
+.contact-form input:focus,
+.contact-form textarea:focus {
+  background-color: var(--secondary-color);
+  color: var(--main-color);
+  
+}
+
+.contact-form textarea {
+  height: 200px;
+  
+}
+
+.contact-form input:focus,
+.contact-form textarea:focus {
+  outline: none;
+  border-color: var(--main-color);
+  
+}
+
+/* About Me */
+.about {
+  text-align: center;
+}
+
+.about a {
+  color: var(--secondary-color);
+  text-decoration: none;
+}
+
+.txt-btn {
+  font-size: 1em;
+}
+
+.skills {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 20px;
+  margin: 30px 0;
+}
+
+.card-skill img {
+  width: 100%;
+  border: 2px solid var(--secondary-color);
+  background-color: var(--secondary-color);
+  border-radius: 20px;
+}
+
+.card-skill img:hover {
+  transform: scale(1.1);
+  border: 2px solid var(--secondary-color);
+  transition: 0.3s;
+}
+
+/* Projects */
+
+.single-project-info {
+  display: grid;
+  grid-template-rows: auto 1fr auto; /* Una fila para arriba, dos filas iguales para las columnas en el medio, y una fila para abajo */
+  grid-template-columns: 1fr 1fr; /* Dos columnas para las secciones izquierda y derecha */
+  grid-gap: 20px;
+  
+}
+
+.single-project-description, 
+.single-project-btn {
+  text-align: center;
+  grid-column: 1 / -1;
+  
+}
+
+.single-project-img img {
+  width: 100%;
+  border: 2px solid var(--primary-color);
+  border-radius: 20px;
+}
+
+.single-project-details ul {
+  list-style: none;
+  padding-bottom: 20px;
+  
+  
+}
+
+.single-project-btn .prev {
+  float: left;
+}
+
+.single-project-btn .next {
+  float: right;
+}
+
+.card-skill {
+  background-color: black;
+  border-radius: 20px;
+
+}
+
+.text-contact {
+  font-family: "Permanent Marker", cursive;
+  
+}
+
+
+.details-map {
+  text-align: right;
 }
